# lp-triage

./: .gitignore  CLAUDE.md  README.md  config.toml.example  lp-triage.toml  pyproject.toml
architecture/: agent-loop.md  auth.md  config.md  events.md  lp-fetcher.md  overview.md  providers.md  repo-manager.md  web-server.md
lp_triage/: cli.py
lp_triage/engine/: agent_loop.py  config.py  events.py  lp_auth.py  lp_fetcher.py  repo_manager.py  run.py
lp_triage/engine/providers/: base.py  gemini_provider.py  openai_provider.py
lp_triage/web/: server.py
lp_triage/web/static/: app.js  index.html  style.css
tests/: conftest.py
tests/integration/: test_server.py
tests/ui/: test_ui.py
tests/unit/: test_agent_loop.py  test_config.py  test_events.py  test_lp_fetcher.py  test_providers.py  test_repo_manager.py
